--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -53,34 +53,44 @@ jobs:
 
       - name: Deploy Backend Services
         run: |
+          # Deploy Product Service
+          SERVICE_PORT=8000
           TYPE=LoadBalancer
           if [ "${{ inputs.STAGING }}" = "true" ]; then TYPE=ClusterIP; fi
 
-          # Product Service
           kubectl create deployment product-service \
             --image=$ACR_LOGIN_SERVER/product_service:${{ inputs.IMAGE_TAG }} \
             -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
           kubectl expose deployment product-service \
             --type=$TYPE \
-            --port=8000 --target-port=8000 \
-            --name=product-service -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+            --port=$SERVICE_PORT \
+            --target-port=8000 \
+            --name=product-service \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
           kubectl label deployment product-service app=product-service -n ${{ inputs.NAMESPACE }} --overwrite
           kubectl set image deployment/product-service *=$ACR_LOGIN_SERVER/product_service:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
 
-          # Order Service
+          # Deploy Order Service  
+          SERVICE_PORT=8001
           kubectl create deployment order-service \
             --image=$ACR_LOGIN_SERVER/order_service:${{ inputs.IMAGE_TAG }} \
             -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
           kubectl expose deployment order-service \
             --type=$TYPE \
-            --port=8001 --target-port=8000 \
-            --name=order-service -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+            --port=$SERVICE_PORT \
+            --target-port=8001 \
+            --name=order-service \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
           kubectl label deployment order-service app=order-service -n ${{ inputs.NAMESPACE }} --overwrite
           kubectl set image deployment/order-service *=$ACR_LOGIN_SERVER/order_service:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
 
       - name: Wait for Backend Deployments
         run: |
-          for dep in product-service order-service; do
+          for dep in $(kubectl get deployments -n ${{ inputs.NAMESPACE }} -o jsonpath='{.items[*].metadata.name}'); do
             kubectl rollout status deployment/$dep -n ${{ inputs.NAMESPACE }} --timeout=300s
             kubectl wait --for=condition=Ready pod -l app=$dep -n ${{ inputs.NAMESPACE }} --timeout=180s
           done
@@ -97,9 +107,14 @@ jobs:
           kubectl create deployment frontend \
             --image=$ACR_LOGIN_SERVER/frontend:${{ inputs.IMAGE_TAG }} \
             -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
           kubectl expose deployment frontend \
-            --port=80 --target-port=80 --type=$TYPE \
-            --name=frontend -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+            --port=80 \
+            --target-port=80 \
+            --type=$TYPE \
+            --name=frontend \
+            -n ${{ inputs.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
+
           kubectl label deployment frontend app=frontend -n ${{ inputs.NAMESPACE }} --overwrite
           kubectl set image deployment/frontend *=$ACR_LOGIN_SERVER/frontend:${{ inputs.IMAGE_TAG }} -n ${{ inputs.NAMESPACE }}
 
@@ -148,63 +163,72 @@ jobs:
           cd util
           npm ci
 
-      - name: Wait for Pods Ready Before Port Forward
+      - name: Wait for Services to be Ready
         run: |
           NAMESPACE="${{ inputs.NAMESPACE }}"
           for svc in product-service order-service frontend; do
-            echo "⏳ Waiting for pods of $svc to be ready..."
+            echo "🔍 Waiting for pods of $svc to be ready..."
             kubectl wait --for=condition=Ready pod -l app=$svc -n $NAMESPACE --timeout=180s
           done
 
-      - name: Setup Port Forwarding and Log URLs
+      - name: Setup Port Forwarding with Correct Ports
         run: |
           NAMESPACE="${{ inputs.NAMESPACE }}"
 
+          # Function to setup port forward dynamically
           setup_port_forward() {
             local service=$1
             local local_port=$2
-            local target_port=$3
 
-            echo "🚀 Setting up port forward for $service: localhost:$local_port -> service:$target_port"
+            TARGET_PORT=$(kubectl get svc $service -n $NAMESPACE -o jsonpath='{.spec.ports[0].targetPort}')
+            echo "🚀 Setting up port forward for $service: localhost:$local_port -> service:$TARGET_PORT"
+
             pkill -f "port-forward.*:$local_port" || true
-            kubectl port-forward svc/$service $local_port:$target_port -n $NAMESPACE &
+            kubectl port-forward svc/$service $local_port:$TARGET_PORT -n $NAMESPACE &
             PID=$!
-            sleep 5
+            sleep 3
             if kill -0 $PID 2>/dev/null; then
               echo "✅ Port forward established for $service (PID: $PID)"
               echo "🔗 Access $service at http://localhost:$local_port"
             else
-              echo "❌ Port forward failed for $service"
+              echo "❌ Port forward for $service failed"
               return 1
             fi
           }
 
-          # Setup forwards using service port
-          setup_port_forward "product-service" 18000 8000
-          setup_port_forward "order-service" 18001 8001
-          setup_port_forward "frontend" 18002 80
+          setup_port_forward "product-service" 18000
+          setup_port_forward "order-service" 18001
+          setup_port_forward "frontend" 18002
+
+          echo "⏳ Waiting 10 seconds for port forwards to stabilize..."
+          sleep 10
 
       - name: Test Service Connectivity
         run: |
           echo "🧪 Testing service connectivity..."
-          for svc in product-service order-service frontend; do
-            LOCAL_PORT=$(( svc == "frontend" ? 18002 : (svc == "order-service" ? 18001 : 18000) ))
-            URL="http://localhost:$LOCAL_PORT"
-            echo "🔍 Testing $svc at $URL"
+
+          test_endpoint() {
+            local name=$1
+            local url=$2
+            local expected_status=${3:-200}
+
+            echo "Testing $name at $url"
             for i in {1..10}; do
-              if curl -f -s --max-time 5 "$URL" >/dev/null 2>&1; then
-                echo "✅ $svc is responding"
-                break
+              if curl -f -s --max-time 5 "$url" >/dev/null 2>&1; then
+                echo "✅ $name is responding"
+                return 0
               else
-                echo "⏳ Attempt $i/10: $svc not ready, retrying in 3s..."
-                sleep 3
-              fi
-              if [ $i -eq 10 ]; then
-                echo "❌ $svc failed to respond after 10 attempts"
-                exit 1
+                echo "⏳ Attempt $i/10: $name not ready, retrying in 2s..."
+                sleep 2
               fi
             done
-          done
+            echo "❌ $name failed to respond after 10 attempts"
+            return 1
+          }
+
+          test_endpoint "Product Service Health" "http://localhost:18000/health"
+          test_endpoint "Order Service Health" "http://localhost:18001/health"
+          test_endpoint "Frontend" "http://localhost:18002/" 200
 
       - name: Export Service URLs and Run Tests
         run: |
