--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -55,6 +55,10 @@ jobs:
         run: |
           kubectl apply -f k8s/configmaps.yaml -n ${{ inputs.NAMESPACE }}
 
+      - name: Apply Secrets
+        run: |
+          kubectl apply -f k8s/secrets.yaml -n ${{ inputs.NAMESPACE }}
+
       # -------------------------------
       # Deploy Databases
       # -------------------------------
