--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -65,13 +65,13 @@ jobs:
       - name: Deploy Product DB
         run: |
           kubectl apply -f k8s/product-db.yaml -n ${{ inputs.NAMESPACE }}
-          kubectl rollout status deployment/product-db-deployment-hd -n ${{ inputs.NAMESPACE }}
+          kubectl rollout status deployment/product-db-deployment-hd -n ${{ inputs.NAMESPACE }} --timeout=300s
           kubectl wait --for=condition=Ready pod -l app=product-db-deployment-hd -n ${{ inputs.NAMESPACE }} --timeout=180s
 
       - name: Deploy Order DB
         run: |
           kubectl apply -f k8s/order-db.yaml -n ${{ inputs.NAMESPACE }}
-          kubectl rollout status deployment/order-db-deployment-hd -n ${{ inputs.NAMESPACE }}
+          kubectl rollout status deployment/order-db-deployment-hd -n ${{ inputs.NAMESPACE }} --timeout=300s
           kubectl wait --for=condition=Ready pod -l app=order-db-deployment-hd -n ${{ inputs.NAMESPACE }} --timeout=180s
 
       # -------------------------------
