--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -1,3 +1,4 @@
+# Fixed version of plugin-deploy.yml
 name: Plugin - Deploy to AKS
 
 on:
@@ -88,13 +89,13 @@ jobs:
       - name: Deploy Product DB
         run: |
           kubectl apply -f k8s/product-db.yaml -n ${{ inputs.NAMESPACE }}
-          kubectl rollout status deployment/product-db-deployment -n ${{ inputs.NAMESPACE }} --timeout=300s
+          kubectl rollout status deployment/product-db-deployment-hd -n ${{ inputs.NAMESPACE }} --timeout=300s
           kubectl wait --for=condition=Ready pod -l app=product-db -n ${{ inputs.NAMESPACE }} --timeout=180s
 
       - name: Deploy Order DB
         run: |
           kubectl apply -f k8s/order-db.yaml -n ${{ inputs.NAMESPACE }}
-          kubectl rollout status deployment/order-db-deployment -n ${{ inputs.NAMESPACE }} --timeout=300s
+          kubectl rollout status deployment/order-db-deployment-hd -n ${{ inputs.NAMESPACE }} --timeout=300s
           kubectl wait --for=condition=Ready pod -l app=order-db -n ${{ inputs.NAMESPACE }} --timeout=180s
 
       # -------------------------------
@@ -123,7 +124,7 @@ jobs:
           echo "🌐 Checking service IPs in namespace ${{ inputs.NAMESPACE }}..."
           kubectl get svc -n ${{ inputs.NAMESPACE }}
 
-          for svc in frontend product-service order-service; do
+          for svc in frontend-hd product-service order-service; do
             TYPE=$(kubectl get svc $svc -n ${{ inputs.NAMESPACE }} -o jsonpath='{.spec.type}' 2>/dev/null || echo "NotFound")
             if [ "$TYPE" = "LoadBalancer" ]; then
               echo "⏳ Waiting for $svc external IP..."
@@ -164,7 +165,7 @@ jobs:
       - name: Wait for Services to be Ready
         run: |
           NAMESPACE="${{ inputs.NAMESPACE }}"
-          for svc in product-service order-service frontend; do
+          for svc in product-service order-service frontend-hd; do
             echo "🔍 Waiting for pods of $svc to be ready..."
             kubectl wait --for=condition=Ready pod -l app=$svc -n $NAMESPACE --timeout=180s
           done
@@ -193,7 +194,7 @@ jobs:
 
           setup_port_forward "product-service" 18000
           setup_port_forward "order-service" 18001
-          setup_port_forward "frontend" 18002
+          setup_port_forward "frontend-hd" 18002
           echo "⏳ Waiting 10 seconds for port forwards to stabilize..."
           sleep 10
 
