--- a/k8s/order-service.yaml
+++ b/k8s/order-service.yaml
@@ -22,7 +22,7 @@ spec:
             - containerPort: 8000
           env:
             - name: POSTGRES_HOST
-              value: order-db-service-hd
+              value: order-db
             - name: POSTGRES_DB
               valueFrom:
                 configMapKeyRef:
